Bloque1-CodingfromWeb2toWeb3/Semana7-Kubernetes/kubernetes/kub-api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kub-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: api.server.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: api
            port:
              number: 3000
